--- a/package.json
+++ b/package.json
@@ -1,28 +1,40 @@
 {
   "name": "sh-vue-boilerplate",
-  "version": "1.0.0",
+  "version": "1.0.6",
   "description": "sh-vue-boilerplate frontend team common lib",
-  "main": "dist/index.js",
+  "main": "lib/index.js",
   "directories": {
-    "lib": "dist"
+    "lib": "./lib"
   },
   "scripts": {
-    "dist:dev": "webpack --config config/webpack.dist.dev.config.js"
+    "dev": "webpack-dev-server --open --inline --hot --compress --history-api-fallback --host 0.0.0.0 --port 8080 --config config/webpack.dev.config.js",
+    "build": "webpack --config config/webpack.dev.config.js",
+    "build:dev": "webpack --config config/webpack.lib.dev.config.js",
+    "build:prod": "webpack --config config/webpack.lib.prod.config.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/sh-frontend-team/vue-boilerplate.git"
   },
   "dependencies": {
-    "moment": "^2.24.0"
+    "@freshservice/bridge": "^1.5.9",
+    "@sh/fetch": "1.0.13",
+    "moment": "^2.24.0",
+    "sh-vue-boilerplate": "^1.0.6",
+    "vant": "^2.4.7",
+    "vue": "^2.6.10",
+    "vuex": "^3.1.2",
+    "weixin-js-sdk": "^1.4.0-test"
   },
   "devDependencies": {
+    "@csstools/normalize.css": "^10.1.0",
     "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-import": "^1.13.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es5-property-mutators": "^6.24.1",
@@ -33,15 +45,18 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
+    "cache-loader": "^4.1.0",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^1.1.12",
     "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.10",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
     "eslint": "^3.19.0",
     "eslint-plugin-vue": "^2.1.0",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "gulp": "^3.9.1",
@@ -63,20 +78,34 @@
     "karma-webpack": "^2.0.13",
     "less": "^2.7.3",
     "less-loader": "^4.0.6",
+    "lib-flexible": "^0.3.2",
     "lolex": "^2.7.5",
     "mocha": "^5.0.4",
     "node-sass": "^4.13.1",
+    "postcss-calc": "^7.0.1",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-flexbugs-fixes": "^4.2.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-normalize": "^8.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-pxtorem": "^4.0.1",
+    "precss": "^4.0.0",
+    "responsive-loader": "^1.2.0",
+    "sass": "^1.25.0",
+    "sass-loader": "^7.3.1",
     "sinon": "^4.4.2",
     "sinon-chai": "^3.3.0",
-    "style-loader": "^0.20.2",
+    "style-loader": "^1.1.3",
+    "stylus-loader": "^3.0.2",
     "tslint": "^5.14.0",
     "typescript": "^3.3.4000",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.2",
-    "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.1",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^14.2.1",
+    "vue-loader": "^15.8.3",
+    "vue-loader-plugin": "^1.3.0",
     "vue-router": "^3.1.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
@@ -85,7 +114,7 @@
     "webpack-merge": "^3.0.0"
   },
   "optionalDependencies": {},
-  "author": "youpomian@suiyi.com.cn && kourou@suiyi.com.cn",
+  "author": "youpomian@suiyi.com.cn",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sh-frontend-team/vue-boilerplate.git/issues"
