--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "./lib"
   },
   "scripts": {
-    "dev": "webpack-dev-server --open --inline --hot --compress --history-api-fallback --host 0.0.0.0 --port 8080 --config build/webpack.dev.config.js",
+    "dev": "webpack-dev-server --open --inline --hot --compress --history-api-fallback --host 0.0.0.0 --port 8081 --config build/webpack.dev.config.js",
     "build": "webpack --config build/webpack.dev.config.js",
     "build:dev": "webpack --config build/webpack.dev.config.js",
     "build:prod": "webpack --config build/webpack.prod.config.js"
@@ -23,6 +23,8 @@
     "sh-vue-boilerplate": "^1.0.6",
     "vant": "^2.4.7",
     "vue": "^2.6.10",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^8.4.0",
     "vuex": "^3.1.2",
     "weixin-js-sdk": "^1.4.0-test"
   },
@@ -98,6 +100,7 @@
     "sinon-chai": "^3.3.0",
     "style-loader": "^1.1.3",
     "stylus-loader": "^3.0.2",
+    "ts-loader": "^6.2.1",
     "tslint": "^5.14.0",
     "typescript": "^3.3.4000",
     "uglifyjs-webpack-plugin": "^1.3.0",
@@ -112,6 +115,7 @@
     "webpack": "^3.11.0",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-dev-server": "^2.11.3",
+    "webpack-env": "^0.8.0",
     "webpack-merge": "^3.0.0"
   },
   "optionalDependencies": {},
