--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sh-vue-boilerplate",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "sh-vue-boilerplate frontend team common lib",
   "main": "lib/index.js",
   "directories": {
@@ -10,7 +10,9 @@
     "dev": "webpack-dev-server --open --inline --hot --compress --history-api-fallback --host 0.0.0.0 --port 8081 --config build/webpack.dev.config.js",
     "build": "webpack --config build/webpack.dev.config.js",
     "build:dev": "webpack --config build/webpack.dev.config.js",
-    "build:prod": "webpack --config build/webpack.prod.config.js"
+    "build:prod": "webpack --config build/webpack.prod.config.js",
+    "publish": "npm version patch -f",
+    "unpublish": "npm unpublish"
   },
   "repository": {
     "type": "git",
