--- a/.babelrc
+++ b/.babelrc
@@ -2,24 +2,25 @@
     "presets": [
         [
             "env",
-            {
-                "loose": false,
-                "modules": "commonjs",
-                "spec": true,
-                "targets": {
-                    "browsers": [
-                        "last 3 Chrome versions",
-                        "last 3 Firefox versions",
-                        "Safari >= 10",
-                        "Explorer >= 11",
-                        "Edge >= 12",
-                        "iOS >= 10",
-                        "Android >= 6"
-                    ]
-                },
-                "useBuiltIns": "usage",
-                "debug": false
-            }
+            "babel-preset-env"
+            // {
+            //     "loose": false,
+            //     "modules": "commonjs2",
+            //     "spec": true,
+            //     "targets": {
+            //         "browsers": [
+            //             "last 3 Chrome versions",
+            //             "last 3 Firefox versions",
+            //             "Safari >= 10",
+            //             "Explorer >= 11",
+            //             "Edge >= 12",˝
+            //             "iOS >= 10",
+            //             "Android >= 6"
+            //         ]
+            //     },
+            //     "useBuiltIns": "usage",
+            //     "debug": false
+            // }
         ],
         "stage-3"
     ],
