--- a/.npmignore
+++ b/.npmignore
@@ -10,7 +10,11 @@
 /dist
 /examples
 /lib/index.js.map
-/node_modules
+node_modules
+/build
+.drone.yaml
+Dockerfile
+*.conf
 /src
 /.babelrc
 /.babelrc.js
