--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "dev": "webpack-dev-server --open --inline --hot --compress --history-api-fallback --host 0.0.0.0 --port 8081 --config build/webpack.dev.config.js",
     "build": "webpack --config build/webpack.dev.config.js",
     "build:dev": "webpack --config build/webpack.dev.config.js",
-    "build:prod": "webpack --config build/webpack.prod.config.js"
+    "build:prod": "webpack --config build/webpack.prod.config.js",
+    "test": "mocha --require babel-register --recursive ./src/test/**/*.test.js",
+    "testapi": "mocha --require babel-register --recursive ./src/services/test/*.test.js",
+    "lint": "eslint --ext .js,.vue src"
   },
   "repository": {
     "type": "git",
@@ -30,9 +33,12 @@
   },
   "devDependencies": {
     "@csstools/normalize.css": "^10.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
+    "@vue/eslint-config-airbnb": "^5.0.2",
     "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-dynamic-import-node": "^1.2.0",
@@ -49,6 +55,7 @@
     "babel-runtime": "^6.26.0",
     "cache-loader": "^4.1.0",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^1.1.12",
     "copy-webpack-plugin": "^4.6.0",
@@ -56,8 +63,10 @@
     "css-loader": "^0.28.10",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
-    "eslint": "^3.19.0",
-    "eslint-plugin-vue": "^2.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-prettier": "^3.1.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -74,7 +83,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
-    "karma-sinon-chai": "^1.3.3",
+    "karma-sinon-chai": "^1.3.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.32",
     "karma-webpack": "^2.0.13",
@@ -93,6 +102,7 @@
     "postcss-preset-env": "^6.7.0",
     "postcss-pxtorem": "^4.0.1",
     "precss": "^4.0.0",
+    "prettier": "^1.19.1",
     "responsive-loader": "^1.2.0",
     "sass": "^1.25.0",
     "sass-loader": "^7.3.1",
