--- a/.babelrc
+++ b/.babelrc
@@ -1,29 +1,5 @@
 {
-    "presets": [
-        [
-            "env",
-            "babel-preset-env"
-            // {
-            //     "loose": false,
-            //     "modules": "commonjs2",
-            //     "spec": true,
-            //     "targets": {
-            //         "browsers": [
-            //             "last 3 Chrome versions",
-            //             "last 3 Firefox versions",
-            //             "Safari >= 10",
-            //             "Explorer >= 11",
-            //             "Edge >= 12",˝
-            //             "iOS >= 10",
-            //             "Android >= 6"
-            //         ]
-            //     },
-            //     "useBuiltIns": "usage",
-            //     "debug": false
-            // }
-        ],
-        "stage-3"
-    ],
+    "presets": [["env", "babel-preset-env"], "stage-3"],
     "plugins": [
         "dynamic-import-node",
         "transform-class-properties",
