--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:prod": "webpack --config build/webpack.prod.config.js",
     "test": "mocha --require babel-register --recursive ./src/test/**/*.test.js",
     "testapi": "mocha --require babel-register --recursive ./src/services/test/*.test.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --fix --ext .js,.vue ./src"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "@csstools/normalize.css": "^10.1.0",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
+    "@vue/cli-service": "^4.2.3",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.26.0",
@@ -67,6 +68,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-vue": "^6.2.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -90,7 +92,6 @@
     "less": "^2.7.3",
     "less-loader": "^4.0.6",
     "lib-flexible": "^0.3.2",
-    "lolex": "^2.7.5",
     "mocha": "^5.0.4",
     "node-sass": "^4.13.1",
     "postcss-calc": "^7.0.1",
@@ -103,6 +104,7 @@
     "postcss-pxtorem": "^4.0.1",
     "precss": "^4.0.0",
     "prettier": "^1.19.1",
+    "prettier-eslint-cli": "^5.0.0",
     "responsive-loader": "^1.2.0",
     "sass": "^1.25.0",
     "sass-loader": "^7.3.1",
