--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "webpack --config build/webpack.dev.config.js",
     "build:dev": "webpack --config build/webpack.dev.config.js",
     "build:prod": "webpack --config build/webpack.prod.config.js",
+    "dll": "webpack --progress --config build/webpack.dll.config.js",
     "test": "mocha --require babel-register --recursive ./src/test/**/*.test.js",
     "testapi": "mocha --require babel-register --recursive ./src/services/test/*.test.js",
     "lint": "eslint --fix --ext .js,.vue ./src"
@@ -22,12 +23,14 @@
   "dependencies": {
     "@freshservice/bridge": "^1.5.9",
     "@sh/fetch": "1.0.13",
+    "lib-flexible": "^0.3.2",
     "moment": "^2.24.0",
     "sh-vue-boilerplate": "^1.0.15",
     "vant": "^2.4.7",
     "vue": "^2.6.10",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.0",
+    "vue-router": "^3.1.6",
     "vuex": "^3.1.2",
     "weixin-js-sdk": "^1.4.0-test"
   },
@@ -57,6 +60,7 @@
     "cache-loader": "^4.1.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "chalk": "^3.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^1.1.12",
     "copy-webpack-plugin": "^4.6.0",
@@ -79,13 +83,14 @@
     "gulp-less": "^4.0.1",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
+    "happypack": "^5.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
     "less": "^2.7.3",
     "less-loader": "^4.0.6",
-    "lib-flexible": "^0.3.2",
     "mocha": "^5.0.4",
     "node-sass": "^4.13.1",
+    "ora": "^4.0.3",
     "postcss-calc": "^7.0.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-flexbugs-fixes": "^4.2.0",
@@ -111,7 +116,6 @@
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^15.8.3",
     "vue-loader-plugin": "^1.3.0",
-    "vue-router": "^3.1.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^3.11.0",
