--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "lib": "./lib"
   },
   "scripts": {
-    "dev": "webpack-dev-server --open --inline --hot --compress --history-api-fallback --host 0.0.0.0 --port 8081 --config build/webpack.dev.config.js",
+    "start": "webpack-dev-server --open --inline --hot --compress --history-api-fallback --host 0.0.0.0 --port 8081 --config build/webpack.dev.config.js",
     "build": "webpack --config build/webpack.dev.config.js",
     "build:dev": "webpack --config build/webpack.dev.config.js",
     "build:prod": "webpack --config build/webpack.prod.config.js",
-    "dll": "webpack --progress --config build/webpack.dll.config.js",
     "test": "mocha --require babel-register --recursive ./src/test/**/*.test.js",
-    "testapi": "mocha --require babel-register --recursive ./src/services/test/*.test.js",
+    "apitest": "mocha --require babel-register --recursive ./src/services/test/*.test.js",
     "lint": "eslint --fix --ext .js,.vue ./src"
   },
   "repository": {
